@@ -10,23 +10,11 @@ use Test::More;
 
 my $mod = 'RPi::WiringPi';
 
-BEGIN {
-    if ($> == 0){
-        $ENV{PI_BOARD} = 1;
-    }
-
-    if (! $ENV{PI_BOARD}){
-        warn "\n*** PI_BOARD is not set! ***\n";
-        $ENV{NO_BOARD} = 1;
-        plan skip_all => "not on a pi board\n";
-        exit;
-    }
-
-    if ($> != 0){
-        print "enforcing sudo for Interrupt tests...\n";
-        system('sudo', 'perl', $0);
-        exit;
-    }
+if (! $ENV{PI_BOARD}){
+    warn "\n*** PI_BOARD is not set! ***\n";
+    $ENV{NO_BOARD} = 1;
+    plan skip_all => "not on a pi board\n";
+    exit;
 }
 
 BEGIN {
